csrc/tests/zxbc_parse_expected/do_crash.err.expected
<PROJECT_ROOT>/tests/functional/arch/zx48k/do_crash.bas:2: error: Cannot convert string to a value. Use VAL() function
<PROJECT_ROOT>/tests/functional/arch/zx48k/do_crash.bas:2: warning: [W130] Empty loop
